--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <link rel="stylesheet" href="style.css">
+    <title>MyWebsite</title>
+    <link rel="stylesheet" href="Home Page/style.css">
 </head>
 <body>
-    <img src="Header_Gradient.jpg" alt="Picture of Ishu in the header">
+    <img src="Home Page/Header_Gradient.jpg" alt="Picture of Ishu in the header">
 
     <header> 
         
