--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
         <nav class="navbar">
             <h4>2024</h4>
             <ul>
-                <li><a href="../2024/Unconventional Bike Rack/Unconventional Bike Rack.html" target="_blank">Unconventional Bike Rack</a></li>
-                <li><a href="../2024/Colorado Visit/Colorado Visit.html" target="_blank">Colorado Visit</a></li>
-                <li><a href="../2024/White Mountains Hike Pt. 1/White Mountains Hike Pt. 1.html" target="_blank">White Mountains Hike</a></li>
+                <li><a href="2024/Unconventional Bike Rack/Unconventional Bike Rack.html" target="_blank">Unconventional Bike Rack</a></li>
+                <li><a href="2024/Colorado Visit/Colorado Visit.html" target="_blank">Colorado Visit</a></li>
+                <li><a href="2024/White Mountains Hike Pt. 1/White Mountains Hike Pt. 1.html" target="_blank">White Mountains Hike</a></li>
             </ul>
 
 
             <h4>2025</h4>
             <ul>
-            <li><a href="../2025/Guitar Build/Guitar_Build.html" target="_blank">Guitar Build</a></li>
-            <li><a href="../2025/California Trip/California Trip.html" target="_blank">California Trip</a></li>
-            <li><a href="../2025/Acadia National Park/Acadia National Park.html" target="_blank">Acadia National Park</a></li>
-            <li><a href="../2025/White Mountains Hike Pt. 2/White Mountains Hike Pt. 2.html" target="_blank">White Mountains Hike Pt. 2</a></li>
+            <li><a href="2025/Guitar Build/Guitar_Build.html" target="_blank">Guitar Build</a></li>
+            <li><a href="2025/California Trip/California Trip.html" target="_blank">California Trip</a></li>
+            <li><a href="2025/Acadia National Park/Acadia National Park.html" target="_blank">Acadia National Park</a></li>
+            <li><a href="2025/White Mountains Hike Pt. 2/White Mountains Hike Pt. 2.html" target="_blank">White Mountains Hike Pt. 2</a></li>
             </ul>
         </nav>
 
