--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
     <main>
         <article>
             <p>
-               Hi, I am Ishu Joshi, a mechanical enigneering gradute from University of Connecticut, Storrs, CT.
-               I am currently working at Engisign Bickford Aerospace & Defense (<a href="https://ebad.com" target="_blank">EBAD</a>), Simsbury, CT. 
+               Hi, I am Ishu Joshi, a mechanical engineering graduate from University of Connecticut, Storrs, CT.
+               I am currently working at Ensign Bickford Aerospace & Defense (<a href="https://ebad.com" target="_blank">EBAD</a>), Simsbury, CT. 
                
                <br>
                <br>
 
-               I created this website to document experience I want to share with the larger commnunity, both in terms of enginnering projects and personal adventures. 
+               I created this website to document experience I want to share with the larger community, both in terms of engineering projects and personal adventures. 
                Please feel free to use the links on the right to explore this website. 
+
                
                 <br>
                <br>
@@ -39,18 +40,18 @@
         <nav class="navbar">
             <h4>2024</h4>
             <ul>
-                <li><a href="2024/Unconventional Bike Rack/Unconventional Bike Rack.html" target="_blank">Unconventional Bike Rack</a></li>
-                <li><a href="2024/Colorado Visit/Colorado Visit.html" target="_blank">Colorado Visit</a></li>
-                <li><a href="2024/White Mountains Hike Pt. 1/White Mountains Hike Pt. 1.html" target="_blank">White Mountains Hike</a></li>
+                <li><a href="../2024/Unconventional Bike Rack/Unconventional Bike Rack.html" target="_blank">Unconventional Bike Rack</a></li>
+                <li><a href="../2024/Colorado Visit/Colorado Visit.html" target="_blank">Colorado Visit</a></li>
+                <li><a href="../2024/White Mountains Hike Pt. 1/White Mountains Hike Pt. 1.html" target="_blank">White Mountains Hike</a></li>
             </ul>
 
 
             <h4>2025</h4>
             <ul>
-            <li><a href="2025/Guitar Build/Guitar_Build.html" target="_blank">Guitar Build</a></li>
-            <li><a href="2025/California Trip/California Trip.html" target="_blank">California Trip</a></li>
-            <li><a href="2025/Acadia National Park/Acadia National Park.html" target="_blank">Acadia National Park</a></li>
-            <li><a href="2025/White Mountains Hike Pt. 2/White Mountains Hike Pt. 2.html" target="_blank">White Mountains Hike Pt. 2</a></li>
+            <li><a href="../2025/Guitar Build/Guitar_Build.html" target="_blank">Guitar Build</a></li>
+            <li><a href="../2025/California Trip/California Trip.html" target="_blank">California Trip</a></li>
+            <li><a href="../2025/Acadia National Park/Acadia National Park.html" target="_blank">Acadia National Park</a></li>
+            <li><a href="../2025/White Mountains Hike Pt. 2/White Mountains Hike Pt. 2.html" target="_blank">White Mountains Hike Pt. 2</a></li>
             </ul>
         </nav>
 
