--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
             </ul>
         </nav>
 
-    <footer></footer>
+    <footer>
+        <p>
+            Email: ishujoshi09@gmail.com
+        </p>
+        
+    </footer>
 
     <script src="index.js"></script>
 </body>
